--- a/ProjekatSpring/src/main/resources/static/login.html
+++ b/ProjekatSpring/src/main/resources/static/login.html
@@ -10,7 +10,7 @@
     
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="#">Home</a> </span>
+            <span><a href="home.html">Home</a> </span>
             <span><a href="#">Locations</a></span>
             <span><a href="#">Contact</a></span>
             <span><a href="#">Schedule</a></span>
