--- a/ProjekatSpring/src/main/resources/static/registration.html
+++ b/ProjekatSpring/src/main/resources/static/registration.html
@@ -13,10 +13,10 @@
         <div class="center" id="container">
         
             <div id="navigation-bar-reg" class="center">
-                <a href="home.html">Home</a>
-                <a href="#">Locations</a>
-                <a href="#">Contact</a>
-                <a href="#">Schedule</a>
+                <a href="index.html">Home</a>
+                <a href="login.html">Login</a>
+                <a href="registration.html">Sign-up</a>
+                <a href="termin.html">Schedule</a>
                 <a href="#">Our prices</a>
             </div>
             <div id="form-reg" class="text-shadow center">
