--- a/ProjekatSpring/src/main/resources/static/table.html
+++ b/ProjekatSpring/src/main/resources/static/table.html
@@ -9,10 +9,10 @@
 
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="#">Home</a> </span>
-            <span><a href="#">Locations</a></span>
-            <span><a href="#">Contact</a></span>
-            <span><a href="#">Schedule</a></span>
+            <span><a href="index.html">Home</a> </span>
+            <span><a href="login.html">Login</a></span>
+            <span><a href="registration.html">Sign-up</a></span>
+            <span><a href="termin.html">Schedule</a></span>
             <span><a href="#">Our prices</a></span>
         </div>
 
