Ubacena pretraga i sortiranje termina

--- a/ProjekatSpring/src/main/resources/static/login.html
+++ b/ProjekatSpring/src/main/resources/static/login.html
@@ -35,7 +35,7 @@
 
                     <div class="center" id="to-center">
                         <a href="registration.html" id = "reg" target="_blank">Member registration</a><br>
-                        <button id="button1">LOGIN</button>
+                        <button class="button1">LOGIN</button>
                     </div>
                 </fieldset>
             </form>
