--- a/ProjekatSpring/src/main/resources/static/table.html
+++ b/ProjekatSpring/src/main/resources/static/table.html
@@ -32,50 +32,50 @@
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
                 <tr class="center">
                     <td></td>
                     <td></td>
-                    <td><button id="button1">Accept</button></td>
-                    <td><button id="button1">Decline</button></td>
+                    <td><button class="button1">Accept</button></td>
+                    <td><button class="button1">Decline</button></td>
                 </tr>
             </tbody>
         </table>
