Registracija, napredna pretraga, odobravanje trenera

--- a/ProjekatSpring/src/main/resources/static/index.html
+++ b/ProjekatSpring/src/main/resources/static/index.html
@@ -8,17 +8,13 @@
     <img src="Pictures/background.jpg" id="background">
     
     <div class="center" id="container">
-        <div id="navigation-bar-log" class="center">
-            <span><a href="index.html">Home</a> </span>
-            <span><a href="login.html">Login</a></span>
-            <span><a href="registration.html">Sign-up</a></span>
-            <span><a href="termin.html">Schedule</a></span>
-            <span><a href="#">Our prices</a></span>
-        </div>
 
         <div id = "quote" class="text-shadow center">
+            <p><h1><strong>ASCENTION GYM</strong></h1></p><br>
             <p><h1>MEET THE BEST VERION OF YOURSELF. NOW!</h1></p>
             <a href="registration.html" id="reg"><h2>Become a member.</h2></a>
+
+            <a href="login.html" id="reg"><h2>Log into your account.</h2></a>
         </div>
     </div>
 </body>
