--- a/ProjekatSpring/src/main/resources/static/table.html
+++ b/ProjekatSpring/src/main/resources/static/table.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <title>Trainer requests</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/verification.js"></script>
 </head>
 <body style="color: white;">
     <img src="Pictures/background.jpg" id="background">
@@ -15,69 +17,17 @@
             <span><a href="termin.html">Schedule</a></span>
             <span><a href="#">Our prices</a></span>
         </div>
-
-        <table>
-            <thead class="text-shadow">
+        
+        <table id="treneri">
+                <tr> <th colspan="6">Trainer requests</th> </tr>
                 <tr>
-                    <th colspan="4">Trainer requests</th>
-                </tr>
-                <tr>
+                    <th>ID</th>
                     <th>Username</th>
-                    <th>Full name</th>
+                    <th>First name</th>
+                    <th>Last name</th>
                     <th>Accept</th>
                     <th>Decline</th>
                 </tr>
-            </thead>
-            <tbody>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-                <tr class="center">
-                    <td></td>
-                    <td></td>
-                    <td><button class="button1">Accept</button></td>
-                    <td><button class="button1">Decline</button></td>
-                </tr>
-            </tbody>
         </table>
     </div>
 </body>
