--- a/ProjekatSpring/src/main/resources/static/clan.html
+++ b/ProjekatSpring/src/main/resources/static/clan.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>User Login</title>
+    <title>Clan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
