--- a/ProjekatSpring/src/main/resources/static/HTML/table.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/table.html
@@ -2,16 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Trainer requests</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/verification.js"></script>
+    <link rel="stylesheet" href="../styles.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/verification.js"></script>
 </head>
 <body style="color: white;">
-    <img src="Pictures/background.jpg" id="background">
+    <img src="../Pictures/background.jpg" id="background">
 
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="index.html">Home</a> </span>
+            <span><a href="../index.html">Home</a> </span>
             <span><a href="login.html">Login</a></span>
             <span><a href="registration.html">Sign-up</a></span>
             <span><a href="termin.html">Schedule</a></span>
