--- a/ProjekatSpring/src/main/resources/static/HTML/termin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/termin.html
@@ -2,15 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Training schedule</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/termin.js"></script>
+    <link rel="stylesheet" href="../styles.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/termin.js"></script>
 </head>
 <body style="color: white;">
 
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="index.html">Home</a> </span>
+            <span><a href="../index.html">Home</a> </span>
             <span><a href="login.html">Login</a></span>
             <span><a href="registration.html">Sign-up</a></span>
             <span><a href="termin.html">Schedule</a></span>
