--- a/ProjekatSpring/src/main/resources/static/HTML/trainerRegistration.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/trainerRegistration.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8"/>
         <title>New Member Registration</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/trainer-reg.js"></script>
+        <link rel="stylesheet" href="../styles.css">
+        <script src="../js/jquery-3.6.0.min.js"></script>
+        <script src="../js/trainer-reg.js"></script>
    </head>
     <body style="color: white;">
-        <img src="Pictures/pic1.jpg" id="img" style="float:left">
-        <img src="Pictures/pic2.jpg" id="img" style="float:right">
+        <img src="../Pictures/pic1.jpg" id="img" style="float:left">
+        <img src="../Pictures/pic2.jpg" id="img" style="float:right">
         
         <div class="center" id="container">
         
             <div id="navigation-bar-reg" class="center">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="login.html">Login</a>
                 <a href="registration.html">Sign-up</a>
                 <a href="termin.html">Schedule</a>
