--- a/ProjekatSpring/src/main/resources/static/index.html
+++ b/ProjekatSpring/src/main/resources/static/index.html
@@ -2,19 +2,22 @@
 <head>
     <meta charset="UTF-8">
     <title>User Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <img src="Pictures/background.jpg" id="background">
     
     <div class="center" id="container">
+        <div id="navigation-bar-log" class="center">
+            <span><a href="termin.html">Raspored termina</a> </span>
+        </div>
 
         <div id = "quote" class="text-shadow center">
             <p><h1><strong>ASCENTION GYM</strong></h1></p><br>
             <p><h1>MEET THE BEST VERION OF YOURSELF. NOW!</h1></p>
-            <a href="registration.html" id="reg"><h2>Become a member.</h2></a>
+            <a href="HTML/registration.html" id="reg"><h2>Become a member.</h2></a>
 
-            <a href="login.html" id="reg"><h2>Log into your account.</h2></a>
+            <a href="HTML/login.html" id="reg"><h2>Log into your account.</h2></a>
         </div>
     </div>
 </body>
