--- a/ProjekatSpring/src/main/resources/static/HTML/admin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/admin.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Administrator</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
+        <script src="../js/jquery-3.6.0.min.js"></script>
+        <script src="../js/admin.js"></script>
     </head>
     <body>
-        <img src="Pictures/background.jpg" id="background">
+        <img src="../Pictures/background.jpg" id="background">
         
         <div class="center" id="container">
             <div id="navigation-bar-log" class="center">
@@ -15,8 +17,8 @@
                 <span><a href="#">Registracija trenera</a></span>
                 <span><a href="#">Brisanje trenera</a></span>
                 <span><a href="table.html">Zahtevi za trenere</a></span>
+                <span><a href="termin.html">Termini</a> </span>
             </div>
 
-            <span><a id="log" href="index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1">LOG OUT</a></span>
-    </body>
+            <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>    </body>
 </html>
