--- a/ProjekatSpring/src/main/resources/static/HTML/registration.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/registration.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8"/>
         <title>New Member Registration</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/registration.js"></script>
+        <link rel="stylesheet" href="../styles.css">
+        <script src="../js/jquery-3.6.0.min.js"></script>
+        <script src="../js/registration.js"></script>
    </head>
     <body style="color: white;">
-        <img src="Pictures/pic1.jpg" id="img" style="float:left">
-        <img src="Pictures/pic2.jpg" id="img" style="float:right">
+        <img src="../Pictures/pic1.jpg" id="img" style="float:left">
+        <img src="../Pictures/pic2.jpg" id="img" style="float:right">
         
         <div class="center" id="container">
             <div id="form-reg" class="text-shadow center">
