--- a/ProjekatSpring/src/main/resources/static/HTML/centar.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/centar.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8"/>
-        <title>New Member Registration</title>
+        <title>New Centar Registration</title>
         <link rel="stylesheet" href="../styles.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
         <script src="../js/centar.js"></script>
