--- a/ProjekatSpring/src/main/resources/static/HTML/table.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/table.html
@@ -11,18 +11,18 @@
 
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="../index.html">Home</a> </span>
-            <span><a href="login.html">Login</a></span>
-            <span><a href="registration.html">Sign-up</a></span>
-            <span><a href="termin.html">Schedule</a></span>
-            <span><a href="#">Our prices</a></span>
+            <span><a href="centar.html">Dodavanje centra</a> </span>
+            <span><a href="#">Dodavanje sala</a></span>
+            <span><a href="#">Registracija trenera</a></span>
+            <span><a href="#">Brisanje trenera</a></span>
+            <span><a href="table.html">Zahtevi za trenere</a></span>
+            <span><a href="termin.html">Termini</a> </span>
         </div>
         
         <table id="treneri">
                 <tr> <th colspan="6">Trainer requests</th> </tr>
                 <tr>
-                    <th>ID</th>
-                    <th>Username</th>
+                    <td>Username</th>
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Accept</th>
