Ispravljene putanje u JS

--- a/ProjekatSpring/src/main/resources/static/HTML/clan.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/clan.html
@@ -20,6 +20,7 @@
             <span><a href="#">Profil</a></span>
         </div>
 
-        <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>    </div>
+       <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>
+    </div>
 </body>
 </html>
