--- a/ProjekatSpring/src/main/resources/static/HTML/admin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/admin.html
@@ -20,5 +20,7 @@
                 <span><a href="termin.html">Termini</a> </span>
             </div>
 
-            <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>    </body>
+            <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>
+        </div>
+    </body>
 </html>
