--- a/ProjekatSpring/src/main/resources/static/HTML/profil.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/profil.html
@@ -27,5 +27,7 @@
             <a href="#" class="button" onclick="prikazi()">Više informacija</a>
         </div>
     </div>
+
+    <span><a id="log" href="../index.html"><button class="button1" onclick="logout()">LOG OUT</a></span>
 </body>
 </html>
