--- a/ProjekatSpring/src/main/resources/static/index.html
+++ b/ProjekatSpring/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Login</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <img src="../Pictures/background.jpg" id="background">
