Izmena i brisanje fitness centra implementirani

--- a/ProjekatSpring/src/main/resources/static/HTML/profil.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/profil.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style2.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/profil.js"></script>
     <title>Vaš profil</title>
 </head>
 <body>
@@ -24,7 +26,7 @@
             <p class="card-body">Uloga: Administrator</p>
             <p class="card-body">Email: nikolavukic333@gmail.com</p>
             <p class="card-body">Broj telefona: 0665762600</p>
-            <a href="#" class="button" onclick="prikazi()">Više informacija</a>
+            <button class="button">Više informacija</button>
         </div>
     </div>
 
