--- a/ProjekatSpring/src/main/resources/static/HTML/table.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/table.html
@@ -11,7 +11,7 @@
 
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
-            <span><a href="centar.html">Dodavanje centra</a> </span>
+            <span><a href="centar.html">Pregled centara</a> </span>
             <span><a href="#">Dodavanje sala</a></span>
             <span><a href="#">Registracija trenera</a></span>
             <span><a href="#">Brisanje trenera</a></span>
@@ -19,10 +19,11 @@
             <span><a href="termin.html">Termini</a> </span>
         </div>
         
-        <table id="treneri">
+        <table class="prikaz" id="treneri">
                 <tr> <th colspan="6">Trainer requests</th> </tr>
                 <tr>
-                    <td>Username</th>
+                    <th>ID</th>
+                    <th>Username</th>
                     <th>First name</th>
                     <th>Last name</th>
                     <th>Accept</th>
