--- a/ProjekatSpring/src/main/resources/static/HTML/admin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/admin.html
@@ -12,10 +12,9 @@
         
         <div class="center" id="container">
             <div id="navigation-bar-log" class="center">
-                <span><a href="centar.html">Dodavanje centra</a> </span>
+                <span><a href="centar.html">Pregled centara</a> </span>
                 <span><a href="#">Dodavanje sala</a></span>
                 <span><a href="#">Registracija trenera</a></span>
-                <span><a href="#">Brisanje trenera</a></span>
                 <span><a href="table.html">Zahtevi za trenere</a></span>
                 <span><a href="termin.html">Termini</a> </span>
             </div>
