Dodan odabir fitness centra pri registraciji trenera, reg. trenera preko admina dodana

--- a/ProjekatSpring/src/main/resources/static/HTML/admin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/admin.html
@@ -14,7 +14,7 @@
             <div id="navigation-bar-log" class="center">
                 <span><a href="centar.html">Pregled centara</a> </span>
                 <span><a href="#">Dodavanje sala</a></span>
-                <span><a href="#">Registracija trenera</a></span>
+                <span><a href="admtrenreg.html">Registracija trenera</a></span>
                 <span><a href="table.html">Zahtevi za trenere</a></span>
                 <span><a href="termin.html">Termini</a> </span>
             </div>
