--- a/ProjekatSpring/src/main/resources/static/HTML/izmena-centra.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/izmena-centra.html
@@ -16,7 +16,7 @@
         <div id="navigation-bar-reg" class="center">
             <a href="centar.html">Pregled centara</a>
             <a href="#">Dodavanje sala</a>
-            <a href="#">Registracija trenera</a>
+            <a href="admtrenreg.html">Registracija trenera</a>
             <a href="#">Brisanje trenera</a>
             <a href="table.html">Zahtevi za trenere</a>
             <a href="termin.html">Termini</a>
@@ -32,19 +32,19 @@
                     <label for="NameField">Name: </label>
                     <input class="center" id="NameField" name = "NameField" type="text"
                         maxlength="35"
-                        required = "required"> <br> <br>
+                        > <br> <br>
 
 
                     <label for="AdressField">Adress: </label>
                     <input class="center" id="AdressField" type="text" name = "AdressField"
                         maxlength="35"
-                        required = "required"> <br> <br>
+                        > <br> <br>
 
                     <label for="ContactField"> Number: </label>
-                    <input class="center" type="tel" name = "ContactField" id="ContactField" placeholder="+381 66 11 11 111" required="required"> <br> <br>
+                    <input class="center" type="tel" name = "ContactField" id="ContactField" placeholder="+381 66 11 11 111" > <br> <br>
 
                     <label for="EmailField"> Email: </label>
-                    <input class="center" id="EmailField" type="email" name = "EmailField" required="required">  <br> <br>                         
+                    <input class="center" id="EmailField" type="email" name = "EmailField" >  <br> <br>                         
                 </fieldset> 
             </div> <br>
 
