--- a/ProjekatSpring/src/main/resources/static/HTML/table.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/table.html
@@ -20,12 +20,13 @@
         </div>
         
         <table class="prikaz" id="treneri">
-                <tr> <th colspan="6">Trainer requests</th> </tr>
+                <tr> <th colspan="7">Trainer requests</th> </tr>
                 <tr>
                     <th>ID</th>
                     <th>Username</th>
                     <th>First name</th>
                     <th>Last name</th>
+                    <th>Centar ID</th>
                     <th>Accept</th>
                     <th>Decline</th>
                 </tr>
