--- a/ProjekatSpring/src/main/resources/static/HTML/trainerRegistration.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/trainerRegistration.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8"/>
-        <title>New Member Registration</title>
+        <title>New Trainer Registration</title>
         <link rel="stylesheet" href="../styles.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
         <script src="../js/trainer-reg.js"></script>
@@ -64,6 +64,10 @@
 
                         <label for="ContactField"> Number: </label>
                         <input class="center" type="tel" name = "ContactField" id="ContactField" placeholder="+381 66 11 11 111" required="required"> <br> <br> <hr class="line"> 
+                        
+                        <label for="centarId"> Choose center ID: </label>
+                        <select name = "centarId" id = "centarId">
+                        </select>
                         
                     </fieldset> 
                 </div> <br>
