--- a/ProjekatSpring/src/main/resources/static/HTML/novi-centar.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/novi-centar.html
@@ -15,7 +15,7 @@
         <div id="navigation-bar-reg" class="center">
             <a href="centar.html">Pregled centara</a>
             <a href="#">Dodavanje sala</a>
-            <a href="#">Registracija trenera</a>
+            <a href="admtrenreg.html">Registracija trenera</a>
             <a href="#">Brisanje trenera</a>
             <a href="table.html">Zahtevi za trenere</a>
             <a href="termin.html">Termini</a>
