Implementirano logicko brisanje trenera

--- a/ProjekatSpring/src/main/resources/static/HTML/admtrenreg.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/admtrenreg.html
@@ -14,11 +14,12 @@
     <div class="center" id="container">
     
         <div id="navigation-bar-reg" class="center">
-            <a href="../index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="registration.html">Sign-up</a>
-            <a href="termin.html">Schedule</a>
-            <a href="#">Our prices</a>
+            <a href="centar.html">Pregled centara</a>
+            <a href="sala.html">Pregled sala</a>
+            <a href="admtrenreg.html">Registracija trenera</a>
+            <a href="brisanje-trenera.html">Brisanje trenera</a>
+            <a href="table.html">Zahtevi za trenere</a>
+            <a href="termin.html">Termini</a>
         </div>
         <div id="form-reg" class="text-shadow center">
             <form name = "tregistracija" method="POST">
