--- a/ProjekatSpring/src/main/resources/static/HTML/centar.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/centar.html
@@ -11,9 +11,9 @@
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
             <span><a href="centar.html">Pregled centara</a> </span>
-            <span><a href="#">Dodavanje sala</a></span>
+            <span><a href="sala.html">Pregled sala</a></span>
             <span><a href="admtrenreg.html">Registracija trenera</a></span>
-            <span><a href="#">Brisanje trenera</a></span>
+            <span><a href="brisanje-trenera.html">Brisanje trenera</a></span>
             <span><a href="table.html">Zahtevi za trenere</a></span>
             <span><a href="termin.html">Termini</a> </span>
         </div>
