--- a/ProjekatSpring/src/main/resources/static/HTML/novi-centar.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/novi-centar.html
@@ -14,9 +14,9 @@
     <div class="center" id="container">
         <div id="navigation-bar-reg" class="center">
             <a href="centar.html">Pregled centara</a>
-            <a href="#">Dodavanje sala</a>
+            <a href="sala.html">Pregled sala</a>
             <a href="admtrenreg.html">Registracija trenera</a>
-            <a href="#">Brisanje trenera</a>
+            <a href="brisanje-trenera.html">Brisanje trenera</a>
             <a href="table.html">Zahtevi za trenere</a>
             <a href="termin.html">Termini</a>
             <a href="admin.html">Profil</a>
