--- a/ProjekatSpring/src/main/resources/static/HTML/izmena-sale.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/izmena-sale.html
@@ -5,7 +5,7 @@
         <title>New Centar Registration</title>
         <link rel="stylesheet" href="../styles.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
-        <script src="../js/izmena-centra.js"></script>
+        <script src="../js/izmena-sale.js"></script>
    </head>
    <body style="color: white;">
     <img src="../Pictures/pic1.jpg" id="img" style="float:left">
@@ -27,24 +27,15 @@
         <div id="form-reg" class="text-shadow center">
             <form name = "izmena-centra" method="POST">
                 <fieldset>
-                    <legend class = "text-shadow center"><h1 style="color:grey">Izmena fitness centra</h1></legend>
+                    <legend class = "text-shadow center"><h1 style="color:grey">Izmena sale</h1></legend>
 
-                    <label for="NameField">Name: </label>
-                    <input class="center" id="NameField" name = "NameField" type="text"
-                        maxlength="35"
-                        > <br> <br>
+                    <label for="CapacityField">Kapacitet: </label>
+                    <input class="center" id="CapacityField" name = "CapacityField" type="text"
+                        maxlength="35"> <br> <br>
 
-
-                    <label for="AdressField">Adress: </label>
-                    <input class="center" id="AdressField" type="text" name = "AdressField"
-                        maxlength="35"
-                        > <br> <br>
-
-                    <label for="ContactField"> Number: </label>
-                    <input class="center" type="tel" name = "ContactField" id="ContactField" placeholder="+381 66 11 11 111" > <br> <br>
-
-                    <label for="EmailField"> Email: </label>
-                    <input class="center" id="EmailField" type="email" name = "EmailField" >  <br> <br>                         
+                    <label for="OznakaField">Oznaka: </label>
+                    <input class="center" id="OznakaField" type="text" name = "OznakaField"
+                        maxlength="35"> <br> <br>                          
                 </fieldset> 
             </div> <br>
 
