Dodano dodavanje i izmena termina za trenere

--- a/ProjekatSpring/src/main/resources/static/HTML/nova-sala.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/nova-sala.html
@@ -16,7 +16,7 @@
         <div id="navigation-bar-reg" class="center">
             <a href="centar.html">Pregled centara</a>
             <a href="sala.html">Pregled sala</a>
-            <a href="#">Registracija trenera</a>
+            <a href="admtrenreg.html">Registracija trenera</a>
             <a href="brisanje-trenera.html">Brisanje trenera</a>
             <a href="table.html">Zahtevi za trenere</a>
             <a href="termin.html">Termini</a>
