--- a/ProjekatSpring/src/main/resources/static/HTML/trener.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/trener.html
@@ -13,8 +13,8 @@
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
             <span><a href="termin.html">Pregled termina</a> </span>
-            <span><a href="#">Dodavanje termina</a></span>
-            <span><a href="#">Brisanje termina</a></span>
+            <span><a href="dodavanje-termina.html">Dodavanje termina</a></span>
+            <span><a href="izmena-termina.html">Izmena termina</a></span>
         </div>
 
         <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>
