--- a/ProjekatSpring/src/main/resources/static/HTML/table.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/table.html
@@ -13,8 +13,8 @@
         <div id="navigation-bar-log" class="center">
             <span><a href="centar.html">Pregled centara</a> </span>
             <span><a href="sala.html">Pregled sala</a></span>
-            <span><a href="#">Registracija trenera</a></span>
-            <span><a href="#">Brisanje trenera</a></span>
+            <span><a href="admtrenreg.html">Registracija trenera</a></span>
+            <span><a href="brisanje-trenera.html">Brisanje trenera</a></span>
             <span><a href="table.html">Zahtevi za trenere</a></span>
             <span><a href="termin.html">Termini</a> </span>
         </div>
