Prikaz odradjenih, ocenjenih i neocenjenih termina

--- a/ProjekatSpring/src/main/resources/static/HTML/clan.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/clan.html
@@ -13,10 +13,11 @@
     <div class="center" id="container">
         <div id="navigation-bar-log" class="center">
             <span><a href="termin.html">Pregled termina</a> </span>
-            <span><a href="#">Prijava na termin</a> </span>
-            <span><a href="#">Prijavljeni treninzi</a></span>
-            <span><a href="#">Neocenjeni treninzi</a></span>
-            <span><a href="#">Ocenjeni treninzi</a></span>
+            <span><a href="prijava-na-termin.html">Prijava na termin</a> </span>
+            <span><a href="prijavljeni.html">Prijavljeni treninzi</a></span>
+            <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
+            <span><a href="neocenjeni.html">Neocenjeni treninzi</a></span>
+            <span><a href="ocenjeni.html">Ocenjeni treninzi</a></span>
             <span><a href="#">Profil</a></span>
         </div>
 
