--- a/ProjekatSpring/src/main/resources/static/HTML/izmena-termina-form.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/izmena-termina-form.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8"/>
-        <title>Dodavanje Novog Termina</title>
+        <title>Izmena Termina</title>
         <link rel="stylesheet" href="../styles.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
         <script src="../js/izmena-termina-form.js"></script>
